Avoid horizontal scrollbar in dock

--- a/css/dock.css
+++ b/css/dock.css
@@ -2,6 +2,9 @@
 
 /* TABLE */
 
+html {
+	scrollbar-gutter: stable;
+}
 table,th,td{
 	border:none;
 }
